# haskdstalk

./: LICENSE  haskdstalk.cabal  stack.yaml
src/: GenPoly.hs  Main.hs
