name:                haskdstalk
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskdstalk#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskdstalk
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lubeck-dv
                     , lubeck-core
                     , lubeck-drawing
                     , caret
                     , blaze-html
                     , blaze-markup
                     , lens
                     , vector
                     , random-fu
                     , foldl
                     , containers